Address some requested changes